--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 		</nav>
 
 		<div class="icons">
-			<a href="#" class="fas fa-heart"></a>
-			<a href="#" class="fas fa-shopping-cart"></a>
-			<a href="#" class="fas fa-user"></a>
+			<a href="#products" class="fas fa-heart"></a>
+			<a href="#products" class="fas fa-shopping-cart"></a>
+			<a href="#contact" class="fas fa-user"></a>
 		</div>
 	</header>
 <!-- header section ends-->
@@ -124,7 +124,7 @@
             <img src="Img7.jpeg" alt="">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="cart-btn">Añadir al carrito</a>
                 <a href="#" class="fas fa-share"></a>
             </div>
         </div>
@@ -140,7 +140,7 @@
             <img src="Img8.jpeg" alt="">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="cart-btn">Añadir al carrito</a>
                 <a href="#" class="fas fa-share"></a>
             </div>
         </div>
@@ -156,7 +156,7 @@
             <img src="Img9.jpeg" alt="">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="cart-btn">Añadir al carrito</a>
                 <a href="#" class="fas fa-share"></a>
             </div>
         </div>
@@ -172,7 +172,7 @@
             <img src="Img10.jpeg" alt="">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="cart-btn">Añadir al carrito</a>
                 <a href="#" class="fas fa-share"></a>
             </div>
         </div>
@@ -188,7 +188,7 @@
             <img src="Img11.jpeg" alt="">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="cart-btn">Añadir al carrito</a>
                 <a href="#" class="fas fa-share"></a>
             </div>
         </div>
@@ -204,7 +204,7 @@
             <img src="Img12.jpeg" alt="">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="cart-btn">Añadir al carrito</a>
                 <a href="#" class="fas fa-share"></a>
             </div>
         </div>
@@ -220,7 +220,7 @@
             <img src="Img13.jpeg" alt="">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="cart-btn">Añadir al carrito</a>
                 <a href="#" class="fas fa-share"></a>
             </div>
         </div>
@@ -236,7 +236,7 @@
             <img src="Img14.jpeg" alt="">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="cart-btn">Añadir al carrito</a>
                 <a href="#" class="fas fa-share"></a>
             </div>
         </div>
@@ -252,7 +252,7 @@
             <img src="Img15.jpeg" alt="">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="cart-btn">Añadir al carrito</a>
                 <a href="#" class="fas fa-share"></a>
             </div>
         </div>
@@ -375,9 +375,9 @@
         </div>
         <div class="box">
             <h3>Links extra</h3>
-            <a href="#">Mi cuenta</a>
-            <a href="#">Mi orden</a>
-            <a href="#">Mis favoritos</a>
+            <a href="#contact">Mi cuenta</a>
+            <a href="#products">Mi orden</a>
+            <a href="#products">Mis favoritos</a>
         </div>
         <div class="box">
             <h3>Ubicacion</h3>
